--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <div > 
   <div id="enter" style="display: flex; flex-direction: column; padding: 30px; align-items: center;">
     <h2>State your name cuz</h2>
-    <input type="text" id="name" name="name">
+    <input type="text" id="name" name="name" style="font-size:65px;">
     <h2>Then pls press enter  </h2>
     </div>
   </div>
