--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
   <div  id="wrong2" style="display: none;position:fixed">
     refresh if you got your name wrong
   </div>
-  <div id="ticket" onmousedown="ticketClicked()" style="display: none; z-index: 100;text-align: center; border-style: dashed;padding: 10px;background-color: green;color: white;">Wooo youre a winner, click me, click me, im a golden ticket</div>
-  <div class="blink_me" id="winnings" style="position:absolute; display: none; z-index: 100;text-align: center; border-style: dashed;padding: 10px;background-color: green;color: white;">Wooo!! <br><br>Merry christmas<br><br>I hope youre free on the 30th september, because youve just won tickets to see parcels!!!
+  <div id="ticket" onmousedown="ticketClicked()" style="display: none; z-index: 100;text-align: center; border-style: dashed;padding: 10px;background-color: green;color: white;font-size: x-large;">Wooo youre a winner, click me, click me, im a golden ticket</div>
+  <div class="blink_me" id="winnings" style="position:absolute; display: none; z-index: 100;text-align: center; border-style: dashed;padding: 10px;background-color: green;color: white;font-size: larger;">Wooo!! 
+    <br><br>Merry christmas<br><br>I hope youre free on the 30th september, because youve just won a ticket to see parcels!!!<br><br>In Brixton O2 acad!!
   <br> <br> Merry christmas!!! <br> <br> (This is real i got you a parcels tic for christmas, cant wait, c u there)</div>
   <img id="pic" width="20px"  style="display: none; z-index: 1" src="mini.jpg" alt=":(">
 </div>
